@@ -837,6 +837,12 @@ SC_JEXPBOOST	292
 SC_HELLPOWER	294
 SC_INVINCIBLE	295
 SC_INVINCIBLEOFF	296
+SC_MANU_ATK	297
+SC_MANU_DEF	298
+SC_SPL_ATK	299
+SC_SPL_DEF	300
+SC_MANU_MATK	301
+SC_SPL_MATK	302
 
 e_gasp	0
 e_what	1
